Border of pictures was causing issues with wrap / overflow.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,9 +136,9 @@ input {
 .port-pic {
     width: 300px;
     height: 300px;
-    border: 10px;
+    border: 1%;
     border-color: aqua;
-    margin: 2% 10%;
+    margin: 2% 5%;
 }
 
 footer {
